<resources>
    <string name="app_name">KDATalk</string>
    <!--<string name="facebook_app_id">354632808476806</string>-->
    <!--<string name="fb_login_protocol_scheme">fb354632808476806</string>-->
    //
    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_kdatalk">Login KDATalk</string>
    <string name="login">Đăng Nhập</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="username_vie">Tên Đăng Nhập</string>
    <string name="confirm_pass">Nhập Lại Mật Khẩu</string>
    <string name="password_vie">Mật Khẩu</string>
    <string name="phone">Số Điện Thoại</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="no_data">Something went wrong!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."</string>
    <string name="newfeed1">"Làm j có ai thương em \nCó ai cần em ..."</string>
    <string name="newfeed2">"Ước gì mình sống hồn nhiên
Như con mèo ngũ giữa hiên mái nhà
👼👼💋#LQP"</string>
    <string name="newfeed3">"18 tuổi không một ai theo đuổi :-((((👌👌👌

#LQP"</string>

    <string name="newfeed4">"mọi người nghĩ sao về việc con gái chủ động trong tình yêu ạ."</string>
    <string name="newfeed5">"Đêm qua chàng mới bảo mình
Làm thơ cũng giỏi
Làm tình cũng hay 🙄🙄🙄"</string>
    <string name="newfeed6">"Tôi đã nghĩ k tồn tại thiên thần cho đến khi xem bức ảnh này :v
Ôi Đóa Nhi Việt Nam cmnr"</string>

    <string name="newfeed7">"Nhìn có giống học sinh ngoan hok mọi người 🥰🥰
IG: @vtnghi_"</string>
    <string name="newfeed8">"18 đủ tuổi lấy chồng
Em chưa 18 anh chờ em không🤔
Ig: huetruc99"</string>

    <string name="str_comment">Bình luận</string>

    <string name="lbl_agree">Đồng ý</string>
    <string name="lbl_cancel">Hủy bỏ</string>
    <string name="lbl_search">Tìm kiếm</string>
    <string name="lbl_learn_voice">Chạm vào micro để nói, tập trung vào kí tự được in lớn</string>

    <string name="forgot_password">Quên Mật Khẩu?</string>
    <string name="register">Đăng Ký</string>
    <string name="name">Họ Và Tên</string>



</resources>