<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_design">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left16"
                android:layout_marginTop="80dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="80dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <TextView
                    android:fontFamily="@font/font_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:textStyle="bold|italic"
                    android:text="@string/login_kdatalk"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="@color/gray"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnServerLogin"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/ibGoogleLogin"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_google_plus" />


                    <ImageButton
                        android:id="@+id/ibFbLogin"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="24dp"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_facebook" />

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebookButton"
                        style="@style/FacebookLoginButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="24dp"
                        android:background="@color/transparent"
                        android:scaleType="centerCrop"
                        android:visibility="gone" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>


</RelativeLayout>