<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include layout="@layout/app_bar_register" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="3dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_name"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/phone"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_phone"
                            style="@style/TextStyle"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="phone"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_email"
                            style="@style/TextStyle"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/username_vie"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_username"
                            style="@style/TextStyle"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="text"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password_vie"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_password"
                            style="@style/TextStyle"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"

                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"

                    app:cardElevation="5dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/confirm_pass"
                        android:textColorHint="@color/gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tv_confirm_password"
                            style="@style/TextStyle"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:background="@drawable/bg_bt_login"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:text="ĐẰNG KÝ"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>