<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="375dp">

                    <ImageView
                        android:id="@+id/iv_cover"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginBottom="75dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/noimg" />

                    <LinearLayout
                        android:id="@+id/lnl_changeCover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="75dp"
                        android:background="@color/gray_transparent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_camera_alt_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Chỉnh sửa"
                            android:textColor="@color/black" />


                    </LinearLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_profile"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_no_img" />

                </RelativeLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_name"
                android:gravity="center"
                android:text="Vũ Anh"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"

                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="3dp"

                app:cardElevation="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_name"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:cursorVisible="true"
                        android:enabled="false"
                        android:gravity="center|left"
                        android:inputType="text"
                        android:maxLength="50"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"

                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="3dp"

                app:cardElevation="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:cursorVisible="true"
                        android:enabled="false"
                        android:gravity="center|left"
                        android:inputType="text"
                        android:maxLength="50"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"

                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="3dp"

                app:cardElevation="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/phone"
                    android:textColorHint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_phone"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:cursorVisible="true"
                        android:enabled="false"
                        android:gravity="center|left"
                        android:inputType="text"
                        android:maxLength="50"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bt_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/bg_bt_login"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="ĐĂNG XUẤT"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>

    <com.kda.kdatalk.ui.widget.ProgressView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_height="wrap_content" />

</RelativeLayout>